# Cloud-Classifier

./: pyproject.toml
Cloud-Classifier/: classifier.py  server.py
local/: ssh.py  test.py
