[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cloud-Classifier"
version = "1.0.0"
description = "Classifier running on Nectar"
authors = [{name="Julian Ceddia", email="jdceddia@gmail.com"}]
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["stm","classifier","automation"]
dependencies = [
    'numpy',
    'flask',
    'flask-cors',
    'requests
]

[tool.setuptools]
packages = ["Cloud-Classifier"]